Finaliza estrutura HTML e CSS do projeto Flamengo

--- a/index.html
+++ b/index.html
@@ -1,44 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Clube de Regatas do Flamengo</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header>
+    <h1>Clube de Regatas do Flamengo</h1>
+    <nav>
+      <ul>
+        <li><a href="#historia">História</a></li>
+        <li><a href="#titulos">Títulos</a></li>
+        <li><a href="#idolos">Ídolos</a></li>
+        <li><a href="#curiosidades">Curiosidades</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <div>   
-        <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
-        </div>
-    </div>
+  <main>
+    <section id="historia">
+      <h2>História</h2>
+      <p>O Clube de Regatas do Flamengo foi fundado em 15 de novembro de 1895 como um clube de remo. Em 1911, iniciou sua jornada no futebol, após a chegada de jogadores do Fluminense. A partir daí, tornou-se um dos maiores e mais populares clubes do Brasil. Em 1927, venceu o concurso "Clube Mais Querido do Brasil". Suas cores vermelho e preto foram adotadas em 1898, e suas campanhas vitoriosas ao longo do século XX ajudaram a espalhar sua torcida pelo país.</p>
+    </section>
 
-    <div class="bar"></div>
+    <section id="titulos">
+      <h2>Títulos</h2>
+      <ul>
+        <li>Libertadores da América: 1981, 2019, 2022</li>
+        <li>Campeonato Brasileiro: 1980, 1982, 1983, 1987, 1992, 2009, 2019, 2020</li>
+        <li>Copa do Brasil: 1990, 2006, 2013, 2022</li>
+        <li>Supercopa do Brasil: 2020, 2021</li>
+        <li>Copa Intercontinental: 1981</li>
+        <li>Campeonato Carioca: mais de 30 conquistas</li>
+      </ul>
+    </section>
 
-    <div class="content">
-        <div class="sidebar">
-            <h2>Título</h2>
-            <ul>
-                <li><a href="#">Links</a></li>
-            </ul>
-        </div>
+    <section id="idolos">
+      <h2>Ídolos do Flamengo</h2>
+      <figure>
+        <img src="./assets/images/Zico_flamengo.webp" alt="Zico comemorando gol pelo Flamengo" width="100">
+        <figcaption>Zico – maior ídolo da história rubro-negra.</figcaption>
+      </figure>
 
-        <div class="main">
-            
-        </div>
+      <figure>
+        <img src="./assets/images/Arrascaeta-comemorando-gol.jpg" width="100" alt="Arrascaeta comemorando gol pelo Flamengo" width="300">
+        <figcaption>Arrascaeta – craque uruguaio das conquistas recentes.</figcaption>
+      </figure>
 
-        <div class="anchors">
-            <h2>Neste Artigo</h2>
-            <ul>
-                <li><a href="#">Âncoras</a></li>
-            </ul>
-        </div>
-    </div>
+      <figure>
+        <img src="./assets/images/Bruno_Henrique.jpg" width="100" alt="Bruno Henrique comemorando gol pelo Flamengo" width="300">
+        <figcaption>Bruno Henrique – comemorando um gol com um sorriso.</figcaption>
+      </figure>
+    </section>
 
-    <div class="footer">
+    <section id="curiosidades">
+      <h2>Curiosidades</h2>
+      <ul>
+        <li>O Flamengo nasceu como clube de remo.</li>
+        <li>Seu primeiro uniforme era azul e dourado.</li>
+        <li>Foi chamado de "Clube de Bronze" por sempre ficar em segundo lugar no começo.</li>
+        <li>O rádio ajudou a popularizar o clube no Norte e Nordeste do Brasil nos anos 1940.</li>
+        <li>Possui a maior torcida do país.</li>
+      </ul>
+    </section>
 
-    </div>
+    <section id="contato">
+      <h2>Contato</h2>
+      <p>Este projeto foi desenvolvido para fins educativos.</p>
+      <p>Email: marcio@example.com</p>
+      <p>GitHub: <a href="https://github.com/MarcioGil" target="_blank">MarcioGil</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Clube de Regatas do Flamengo – Projeto Educacional</p>
+  </footer>
 </body>
 </html>
+
